# docpipe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docpipe/: citations.py  html.py  matchers.py  pdf.py  pipeline.py  soffice.py
docpipe/tests/: test_html.py  test_matchers.py  test_xmlutils.py
