[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docpipe"
version = "0.0.1"
authors = [
  { name="Greg Kempe", email="greg@laws.africa" },
]
description = "A simple pipeline for processing documents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml >= 4.0",
    "cssutils >= 2",
]

[project.urls]
"Homepage" = "https://github.com/laws-africa/docpipe"
"Bug Tracker" = "https://github.com/laws-africa/docpipe/issues"
